# math-equation-discovery

./: .clang-format  .gitignore  README.md
approaches/genetic_programming/: README.md
approaches/neural_networks/: README.md
approaches/sparse_identification/: README.md
approaches/symbolic_regression/: README.md
cpp/: CMakeLists.txt
cpp/_codeql_build_dir/: basic_discovery  test_equation_discovery
cpp/examples/: basic_discovery.cpp
cpp/src/: equation_discovery.cpp  equation_discovery.h
cpp/tests/: test_equation_discovery.cpp
docs/: README.md
problems/biology/: README.md
problems/dynamical_systems/: README.md
problems/economics/: README.md
problems/physics/: README.md
